# Local2FA

./: .gitignore  Local2FA.spec  README.en.md  README.md  package-lock.json  package.json  pywebview_app.py  sidecar.py  sidecar.spec  totp_cli.py  totp_gui.py  vite.config.js
.github/workflows/: release.yml
app/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
